@@ -4,18 +4,12 @@ pipeline {
         HARBOR_URL = credentials('harbor-registry-url')
         HARBOR_USERNAME = credentials('harbor-credentials-username')
         HARBOR_PASSWORD = credentials('harbor-credentials-password')
-        MAVEN_OPTS = "--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
     }
     stages {
         stage('Checkout') {
             steps {
                 echo 'Checking out source code...'
                 checkout scm 
-            }
-        }
-        stage('Build') {
-            steps {
-                sh 'mvn clean install -DskipTests'
             }
         }
         stage('Dockerize') {
